--- a/Citizen_Dashboard.html
+++ b/Citizen_Dashboard.html
@@ -49,7 +49,7 @@
 
             <div class="col-lg-8 ">
                 <div class="b-gen-container__main-pane_greeting-img">
-                    <img src="images/mock_Img.png" alt="">
+                    <img src="images/image.png" alt="">
                 </div>
 
                 <div class="b-gen-container__main-pane_owner-description b-gen-container__main-pane_owner-description__offset">
@@ -62,11 +62,11 @@
             </div>
             <div class="  col-lg-4 ">
                 <div class="b-gen-container__main-pane_button-container">
-                    <button type="button" class="b-button b-button_green b-button_apply">
-                        <span class="b-button__content b-button__content_icon b-button__content_icon-paper">Apply for Benefits</span>
+                    <button type="button" class="b-button b-button_apply b-button_citizen">
+                        <span class="b-button__content b-button__content_icon b-button__content_icon-paper b-button_general">Apply for Benefits</span>
                     </button>
                     <button type="button" class="b-button b-button_gray b-button__main-pane__button-container__offset">
-                        <span class="b-button__content b-button__content_icon b-button__content_icon-upload">Upload Supporting Documents</span>
+                        <span class="b-button__content b-button__content_icon b-button__content_icon-upload b-button_general">Upload Supporting Documents</span>
                     </button>
                 </div>
             </div>
@@ -79,7 +79,7 @@
             </div>
             <div class="b-gen-container__button-container  col-sm-6 col-md-6 col-lg-6">
                 <button type="button" class="b-button">
-                    <span class="b-button__content b-button__content_icon b-button__content_icon-mail">Navigate to Message Center</span>
+                    <span class="b-button__content b-button__content_icon b-button__content_icon-mail b-button_general">Navigate to Message Center</span>
                 </button>
             </div>
         </div>
@@ -94,7 +94,7 @@
             </div>
             <div class="b-gen-container__button-container col-sm-6 col-md-6 col-lg-6">
                 <button type="button" class="b-button">
-                    <span class="b-button__content b-button__content_icon b-button__content_icon-plus">Add New Member</span>
+                    <span class="b-button__content b-button__content_icon b-button__content_icon-plus b-button_general">Add New Member</span>
                 </button>
             </div>
         </div>
@@ -178,7 +178,7 @@
             </div>
             <div class="b-gen-container__button-container  col-sm-6 col-md-6 col-lg-6">
                 <button type="button" class="b-button">
-                    <span class="b-button__content b-button__content_icon b-button__content_icon-arrow">Manage Invoices</span>
+                    <span class="b-button__content b-button__content_icon b-button__content_icon-view b-button_general">View Benefit Details</span>
                 </button>
             </div>
         </div>
@@ -193,7 +193,7 @@
             </div>
             <div class="b-gen-container__button-container  col-sm-6 col-md-6 col-lg-6">
                 <button type="button" class="b-button">
-                    <span class="b-button__content b-button__content_icon b-button__content_icon-pay">Make Payment</span>
+                    <span class="b-button__content b-button__content_icon b-button__content_icon-pay b-button_general">Make Payment</span>
                 </button>
             </div>
         </div>
@@ -217,7 +217,7 @@
             </div>
             <div class="b-gen-container__button-container  col-sm-6 col-md-6 col-lg-6">
                 <button type="button" class="b-button">
-                    <span class="b-button__content b-button__content_icon b-button__content_icon-upload_w">Upload Supporting Documents</span>
+                    <span class="b-button__content b-button__content_icon b-button__content_icon-upload_w b-button_general">Upload Supporting Documents</span>
                 </button>
             </div>
         </div>
