mini fix form action

--- a/AddNew.html
+++ b/AddNew.html
@@ -49,7 +49,7 @@
             </div>
 
         </div>
-        <form>
+        <form action="">
         <div class=" b-gen-container__container-pane b-gen-container__container-pane_link_color b-gen-container__container-pane-form-padding">
 
 
