blue button apply for benefits added

--- a/Citizen_Dashboard.html
+++ b/Citizen_Dashboard.html
@@ -188,7 +188,7 @@
             </div>
             <div class="b-gen-container__button-container  col-sm-6 col-md-6 col-lg-6">
                 <button type="button" class="b-button">
-                    <span class="b-button__content b-button__content_icon b-button__content_icon-view b-button_general">View Benefit Details</span>
+                    <span class="b-button__content b-button__content_icon b-button__content_icon-paper b-button_general_apply">Apply for Benefits</span>
                 </button>
             </div>
         </div>
