--- a/Citizen_Dashboard.html
+++ b/Citizen_Dashboard.html
@@ -201,15 +201,19 @@
                 </button>
             </div>
         </div>
-        <div class=" b-gen-container__container-pane ">
+        <div class=" b-gen-container__invoice__box b-gen-container__container-pane__payment_font-style ">
             <div class="row">
-                <div class="b-gen-container__container-pane_link_color">
-                    <div class="col-lg-4 text-left"><span
-                            class="text-uppercase">Total Balance:</span><strong>$100.00</strong></div>
-                    <div class="col-lg-4 text-center"><span class="text-uppercase">Status:</span><strong>New</strong>
-                    </div>
-                    <div class="col-lg-4 text-right"><span
-                            class="text-uppercase">Due Date:</span><strong>11/15/2015</strong></div>
+                <div class="col-lg-4 text-left">
+                    <span class="text-uppercase">Total Balance:</span>
+                    <span class="b-gen-container__container-pane__payment_emphasized-text">$100.00</span>
+                </div>
+                <div class="col-lg-4 text-center">
+                    <span class="text-uppercase">Status:</span>
+                    <span class="b-gen-container__container-pane__payment_emphasized-text">New</span>
+                </div>
+                <div class="col-lg-4 text-right">
+                    <span class="text-uppercase">Due Date:</span>
+                    <span class="b-gen-container__container-pane__payment_emphasized-text">11/15/2015</span>
                 </div>
             </div>
         </div>
