--- a/AddNew.html
+++ b/AddNew.html
@@ -6,9 +6,9 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body class="b-dashboard">
-    <div class="b-gen-wrapper">
+    <div class="l-gen-wrapper">
 
-        <div class="b-content-wrapper">
+        <div class="l-content-wrapper">
 
             <div class="b-dashboard__header">
                 <div class="b-gen-layout-wrapper">
@@ -32,9 +32,9 @@
                     <div class="b-nav-bar">
                         <div class="b-nav__primary-menu">
                             <nav class="b-primary-menu">
-                                <span class="b-primary-menu__item b-primary-menu__item_person-name b-button__content_icon-user_info b-button__content_icon">
+                                <a href="#" class="b-primary-menu__item b-primary-menu__item_person-name b-button__content_icon-user_info b-button__content_icon b-primary-menu__item_without-action">
                                     John Doe
-                                </span>
+                                </a>
                                 <a  href='#' class="b-primary-menu__item b-primary-menu__item_sign-out b-button__content_icon-sign_out b-button__content_icon">
                                     Sign out
                                 </a>
