--- a/landing.html
+++ b/landing.html
@@ -9,7 +9,7 @@
 
 <div class="b-individuals">
     <div class="b-individuals_item">
-        <a href="redirect-to-dashboard.jsp" class="b-item">
+        <a href="dashboardRedirect" class="b-item">
             <h2 class="b-item_title">Individuals and Households</h2>
 
             <div class="b-item_image">
@@ -19,11 +19,11 @@
         </a>
     </div>
     <div class="b-individuals_item">
-        <!--<a href="redirect-to-dashboard.jsp" class="b-item">-->
+        <!--<a href="https://172.26.32.40:9444/self-reg/" class="b-item">-->
         <h2 class="b-item_title">Small Businesses and Employees</h2>
 
         <div class="b-item_image">
-            <i class="fa fa-play"></i>
+            <i class="b-individuals-fa b-individuals-fa-play"></i>
             <img src="images/small-business.jpg" alt="Small Businesses and Employees" class="b-item_image__width">
         </div>
         <!--</a>-->
@@ -33,7 +33,7 @@
         <h2 class="b-item_title">Native Americans</h2>
 
         <div class="b-item_image">
-            <i class="fa fa-play"></i>
+            <i class="b-individuals-fa b-individuals-fa-play"></i>
             <img src="images/native.jpg" alt="Native Americans" class="b-item_image__width">
         </div>
         <!--</a>-->
