--- a/landing.html
+++ b/landing.html
@@ -9,11 +9,11 @@
 
 <div class="b-individuals">
     <div class="b-individuals_item">
-        <a href="dashboardRedirect" class="b-item">
+        <a href="dashboardRedirect">
             <h2 class="b-item_title">Individuals and Households</h2>
 
             <div class="b-item_image">
-                <i class="b-individuals-fa b-individuals-fa-play"></i>
+                <i class="b-item-image_fa b-item-image_fa_play"></i>
                 <img src="images/households.jpg" alt="Individuals and Households" class="b-item_image__width">
             </div>
         </a>
@@ -23,7 +23,7 @@
         <h2 class="b-item_title">Small Businesses and Employees</h2>
 
         <div class="b-item_image">
-            <i class="b-individuals-fa b-individuals-fa-play"></i>
+            <i class="b-item-image_fa b-item-image_fa_play"></i>
             <img src="images/small-business.jpg" alt="Small Businesses and Employees" class="b-item_image__width">
         </div>
         <!--</a>-->
@@ -33,7 +33,7 @@
         <h2 class="b-item_title">Native Americans</h2>
 
         <div class="b-item_image">
-            <i class="b-individuals-fa b-individuals-fa-play"></i>
+            <i class="b-item-image_fa b-item-image_fa_play"></i>
             <img src="images/native.jpg" alt="Native Americans" class="b-item_image__width">
         </div>
         <!--</a>-->
