landing page header fix

--- a/landing_page.html
+++ b/landing_page.html
@@ -9,16 +9,13 @@
 
 <div class="l-gen-wrapper">
 
-
-
-
         <div class="b-dashboard__header">
             <div class="b-gen-layout-wrapper">
-                <header class="b-header b-header_lp-size">
+                <header class="b-header">
                     <div class="b-header__logo">
                         <div class="b-logo">
-                            <div class="b-logo__logo">
-                                <img src="images/marketplace.png" alt="Your State Health Care Marketplace" title="Your State Health Care Marketplace" width="135">
+                            <div class="b-logo__logo b-logo__logo_center">
+                                <img src="images/marketplace.png" class="b-logo__logo_landing-size" alt="Your State Health Care Marketplace" title="Your State Health Care Marketplace">
                             </div>
                         </div>
                     </div>
@@ -26,7 +23,7 @@
             </div>
         </div>
 
-        <div class="b-dashboard__nav-bar b-dashboard__nav-bar_lp-color">
+        <div class="b-dashboard__nav-bar">
             <div class="b-gen-layout-wrapper">
                 <div class="b-nav-bar">
                     <div class="b-nav__primary-menu">
@@ -87,7 +84,7 @@
         </div>
 
 
-    <div class="b-landing-page__footer"></div>
+    <div class="b-dashboard__footer"></div>
 
 </div>
 </body>
