--- a/landing_page.html
+++ b/landing_page.html
@@ -32,36 +32,36 @@
             </div>
         </div>
 
-        <div class="b-dashboard__content b-dashboard__content__lp-background">
+        <div class="b-dashboard__content b-dashboard__content__landing-background">
 
-            <div class="b-individuals">
-                <div class="b-individuals_item">
-                    <a href="dashboardRedirect" class="b-item">
-                        <h2 class="b-item_title">Individuals and Households</h2>
+            <div class="b-list">
+                <div class="b-list__item">
+                    <a href="dashboardRedirect" class="b-list-item">
+                        <h2 class="b-list-item__title">Individuals and Households</h2>
 
-                        <div class="b-item_image">
-                            <i class="b-item-image_fa b-item-image_fa_play"></i>
-                            <img src="images/households.jpg" alt="Individuals and Households" class="b-item_image__width">
+                        <div class="b-list-item__image">
+                            <i class="b-list-item-image__fa b-list-item-image__fa_play"></i>
+                            <img src="images/households.jpg" alt="Individuals and Households" class="b-list-item__image_width">
                         </div>
                     </a>
                 </div>
-                <div class="b-individuals_item">
+                <div class="b-list__item">
                     <!--<a href="https://172.26.32.40:9444/self-reg/" class="b-item">-->
-                    <h2 class="b-item_title">Small Businesses and Employees</h2>
+                    <h2 class="b-list-item__title">Small Businesses and Employees</h2>
 
-                    <div class="b-item_image">
-                        <i class="b-item-image_fa b-item-image_fa_play"></i>
-                        <img src="images/small-business.jpg" alt="Small Businesses and Employees" class="b-item_image__width">
+                    <div class="b-list-item__image">
+                        <i class="b-list-item-image__fa b-list-item-image__fa_play"></i>
+                        <img src="images/small-business.jpg" alt="Small Businesses and Employees" class="b-list-item__image_width">
                     </div>
                     <!--</a>-->
                 </div>
-                <div class="b-individuals_item">
+                <div class="b-list__item">
                     <!--<a href="redirect-to-dashboard.jsp" class="b-item">-->
-                    <h2 class="b-item_title">Native Americans</h2>
+                    <h2 class="b-list-item__title">Native Americans</h2>
 
-                    <div class="b-item_image">
-                        <i class="b-item-image_fa b-item-image_fa_play"></i>
-                        <img src="images/native.jpg" alt="Native Americans" class="b-item_image__width">
+                    <div class="b-list-item__image">
+                        <i class="b-list-item-image__fa b-list-item-image__fa_play"></i>
+                        <img src="images/native.jpg" alt="Native Americans" class="b-list-item__image_width">
                     </div>
                     <!--</a>-->
                 </div>
@@ -72,9 +72,9 @@
                     <img src="images/health.png" alt="Welcome to Your State Health Care Marketplace">
                 </div>
                 <div class="b-landing-page-info__text">
-                    <div class="b-info">
-                        <div class="b-info__title">Welcome to Your State Health Care Marketplace</div>
-                        <div class="b-info__text">This is the marketplace where you can find affordable care.
+                    <div class="b-landing-info">
+                        <div class="b-landing-info__title">Welcome to Your State Health Care Marketplace</div>
+                        <div class="b-landing-info__text">This is the marketplace where you can find affordable care.
                             We will guide you through a process that is easy to
                             understand as we help you find the right health coverage for you and your family.</div>
                     </div>
