--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
         <div class="b-dashboard__content">
 
-            <div class="container b-gen-container">
+            <div class="container b-gen-container b-gen-container_first">
                 <div class="b-gen-container__header-pane row ">
                     <div class="b-gen-container__header-heading col-sm-6 col-md-6 col-lg-6">
                         <h2 class="b-gen-container__header-heading-text">My Messages</h2>
