--- a/AddNew.html
+++ b/AddNew.html
@@ -45,7 +45,7 @@
             </div>
 
             <div class="b-dashboard__content">
-                <div class="container b-gen-container">
+                <div class="container b-gen-container b-gen-container_first">
                     <div class="b-gen-container__header-pane row ">
                         <div class="b-gen-container__header-heading col-sm-6 col-md-6 col-lg-6">
                             <h2 class="b-gen-container__header-heading-text b-gen-container__header-heading-text_size17">Add New Household Member</h2>
