--- a/Citizen_Dashboard_alternative.html
+++ b/Citizen_Dashboard_alternative.html
@@ -47,7 +47,7 @@
         </div>
 
         <div class="b-dashboard__content">
-            <div class="container  b-gen-container__container-pane__citizen-box">
+            <div class="container  b-gen-container__container-pane__citizen-box b-gen-container_first">
                 <div class="row">
                     <div class="b-gen-presentation">
                         <div class="col-lg-8">
@@ -260,7 +260,66 @@
                         </button>
                     </div>
                 </div>
-                <div class=" b-gen-container__invoice__box b-gen-container__container-pane__payment_font-style ">
+                <div class="b-table-container">
+
+                    <div class="row">
+                        <div class="b-table-container__header-box">
+                            <div class="col-lg-5 ">Total Balance</div>
+                            <div class="col-lg-4 ">Status</div>
+                            <div class="col-lg-3  ">Due Date</div>
+                        </div>
+                    </div>
+                    <div class="row b-table-container__row ">
+                        <div class="col-lg-5 ">
+                            <h2 class="b-table__container__content__header-heading-text">$100</h2>
+                        </div>
+                        <div class="col-lg-4  ">
+                            <div class="b-table__container__content">
+                                New
+                            </div>
+                        </div>
+                        <div class="col-lg-3  ">
+                            <div class="b-table__container__content">
+                                11/15/2015
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="row b-table-container__row">
+
+                        <div class="col-lg-5 ">
+                            <h2 class="b-table__container__content__header-heading-text">$100</h2>
+                        </div>
+                        <div class="col-lg-4  ">
+                            <div class="b-table__container__content">
+                                New
+                            </div>
+                        </div>
+                        <div class="col-lg-3  ">
+                            <div class="b-table__container__content">
+                                11/15/2015
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="row b-table-container__row">
+                        <div class="col-lg-5 ">
+                            <h2 class="b-table__container__content__header-heading-text-invoices">$100</h2>
+                        </div>
+                        <div class="col-lg-4  ">
+                            <div class="b-table__container__content">
+                                New
+                            </div>
+                        </div>
+                        <div class="col-lg-3  ">
+                            <div class="b-table__container__content">
+                                11/15/2015
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+                <!--<div class=" b-gen-container__invoice__box b-gen-container__container-pane__payment_font-style ">
                     <div class="row">
                         <div class="col-lg-4 text-left">
                             <span class="text-uppercase">Total Balance:</span>
@@ -275,7 +334,7 @@
                             <span class="b-gen-container__container-pane__payment_emphasized-text">11/15/2015</span>
                         </div>
                     </div>
-                </div>
+                </div>-->
             </div>
             <div class="container b-gen-container">
                 <div class="b-gen-container__header-pane row ">
