--- a/Citizen_Dashboard.html
+++ b/Citizen_Dashboard.html
@@ -66,7 +66,7 @@
                         <div class="  col-lg-4 ">
                             <div class="b-gen-container__main-pane_button-container">
                                 <button type="button" class="b-button b-button_apply b-button_citizen">
-                                    <span class="b-button__content b-button__content_icon b-button__content_icon-paper b-button_general">Apply for Benefits</span>
+                                    <span class="b-button__content b-button__content_icon b-button__content_icon-paper b-button_general">View Benefit Details</span>
                                 </button>
                                 <button type="button"
                                         class="b-button b-button_gray b-button__main-pane__button-container__offset">
