--- a/Citizen_Dashboard_alternative.html
+++ b/Citizen_Dashboard_alternative.html
@@ -65,7 +65,7 @@
                         <div class="  col-lg-4 ">
                             <div class="b-gen-container__main-pane_button-container">
                                 <button type="button" class="b-button b-button_apply b-button_citizen">
-                                    <span class="b-button__content b-button__content_icon b-button__content_icon-paper b-button_general">Apply for Benefits</span>
+                                    <span class="b-button__content b-button__content_icon b-button__content_icon-paper b-button_general">View Benefit Details</span>
                                 </button>
                                 <button type="button"
                                         class="b-button b-button_gray b-button__main-pane__button-container__offset">
@@ -184,13 +184,21 @@
                         <h2 class="b-gen-container__header-heading-text">My Programs</h2>
                     </div>
                     <div class="b-gen-container__button-container  col-sm-6 col-md-6 col-lg-6">
-                        <button type="button" class="b-button">
+                        <button type="button" class="b-button b-button_margin">
                             <span class="b-button__content b-button__content_icon b-button__content_icon-view b-button_general">View Benefit Details</span>
+                        </button>
+                        <button type="button" class="b-button b-button_general_green">
+                            <span class="b-button__content b-button__content_icon b-button__content_icon-change_w b-button_general">Change Health Plan</span>
                         </button>
                     </div>
                 </div>
                 <div class="b-table-container">
-
+                    <div class="row">
+                        <div class="b-table-container__notification">
+                            Annual Open Enrollment Period is currently active for household members marked with * below.<br>
+                            If you would like to change your health plan, you can do it now. Otherwise, your current will continue for the next year.
+                        </div>
+                    </div>
                     <div class="row">
                         <div class="b-table-container__header-box">
                             <div class="col-lg-5 ">name</div>
